VZDEV/src/objects/CCPM_segmentation__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will capture which Territories’ Sales Rep will have this Event type available to them</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Segmentations</relationshipLabel>
        <relationshipName>CCPM_segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_channels__c</fullName>
        <inlineHelpText>This field will capture a value if the Event type should be available based on the Channel nation-wide when Market, District and Territory are left blank.</inlineHelpText>
        <label>Channels</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_districts1__c</fullName>
        <inlineHelpText>This field will capture which District’s Sales Rep will have this Event type available to them</inlineHelpText>
        <label>Districts 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK01</fullName>
                </value>
                <value>
                    <fullName>CAR01-Coastal Carolinas</fullName>
                </value>
                <value>
                    <fullName>CAR02-Eastern NC</fullName>
                </value>
                <value>
                    <fullName>CAR03-NC Triad</fullName>
                </value>
                <value>
                    <fullName>CAR04-SC Central</fullName>
                </value>
                <value>
                    <fullName>CAR05-SCSE Coast</fullName>
                </value>
                <value>
                    <fullName>CAR06-Triangle North</fullName>
                </value>
                <value>
                    <fullName>CAR07-Triangle South</fullName>
                </value>
                <value>
                    <fullName>CC01</fullName>
                </value>
                <value>
                    <fullName>CC02</fullName>
                </value>
                <value>
                    <fullName>CC03</fullName>
                </value>
                <value>
                    <fullName>CC04</fullName>
                </value>
                <value>
                    <fullName>CC05</fullName>
                </value>
                <value>
                    <fullName>CC06</fullName>
                </value>
                <value>
                    <fullName>CP01</fullName>
                </value>
                <value>
                    <fullName>CP02</fullName>
                </value>
                <value>
                    <fullName>CP03</fullName>
                </value>
                <value>
                    <fullName>CP04</fullName>
                </value>
                <value>
                    <fullName>CP05</fullName>
                </value>
                <value>
                    <fullName>CP06</fullName>
                </value>
                <value>
                    <fullName>CP07</fullName>
                </value>
                <value>
                    <fullName>DS01-Las Vegas West</fullName>
                </value>
                <value>
                    <fullName>DS02-Phoenix North</fullName>
                </value>
                <value>
                    <fullName>DS03-Phoenix West</fullName>
                </value>
                <value>
                    <fullName>DS04-Scottsdale</fullName>
                </value>
                <value>
                    <fullName>DS05-Phoenix East</fullName>
                </value>
                <value>
                    <fullName>DS06-Phoenix South</fullName>
                </value>
                <value>
                    <fullName>DS07-Tucson West</fullName>
                </value>
                <value>
                    <fullName>DS08-Tucson East</fullName>
                </value>
                <value>
                    <fullName>DS09-Albuquerque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_districts2__c</fullName>
        <inlineHelpText>This field will capture which District’s Sales Rep will have this Event type available to them</inlineHelpText>
        <label>Districts 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLW04-Far West Chicago</fullName>
                </value>
                <value>
                    <fullName>GLW05-South Chicago-NW IN</fullName>
                </value>
                <value>
                    <fullName>GLW06-Peoria-Davenport</fullName>
                </value>
                <value>
                    <fullName>GLW07-SW Chicago</fullName>
                </value>
                <value>
                    <fullName>GLW08-W MI-Grand Rapids</fullName>
                </value>
                <value>
                    <fullName>GLW09-NE Indiana</fullName>
                </value>
                <value>
                    <fullName>HI01</fullName>
                </value>
                <value>
                    <fullName>HI02</fullName>
                </value>
                <value>
                    <fullName>HQ-Telesales</fullName>
                </value>
                <value>
                    <fullName>KM01-Southern IL</fullName>
                </value>
                <value>
                    <fullName>KM02-St Louis</fullName>
                </value>
                <value>
                    <fullName>KM03-Southern MO</fullName>
                </value>
                <value>
                    <fullName>KM04-KC East</fullName>
                </value>
                <value>
                    <fullName>KM05-KC West</fullName>
                </value>
                <value>
                    <fullName>KM06-Central KS</fullName>
                </value>
                <value>
                    <fullName>LA01</fullName>
                </value>
                <value>
                    <fullName>LA02</fullName>
                </value>
                <value>
                    <fullName>LA03</fullName>
                </value>
                <value>
                    <fullName>LA04</fullName>
                </value>
                <value>
                    <fullName>LA05</fullName>
                </value>
                <value>
                    <fullName>LA06</fullName>
                </value>
                <value>
                    <fullName>LA07</fullName>
                </value>
                <value>
                    <fullName>LA08</fullName>
                </value>
                <value>
                    <fullName>MS01</fullName>
                </value>
                <value>
                    <fullName>MS02</fullName>
                </value>
                <value>
                    <fullName>MS03</fullName>
                </value>
                <value>
                    <fullName>MS04</fullName>
                </value>
                <value>
                    <fullName>MS05</fullName>
                </value>
                <value>
                    <fullName>MS06</fullName>
                </value>
                <value>
                    <fullName>MT01-Northern CO-WY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_districts3__c</fullName>
        <inlineHelpText>This field will capture which District’s Sales Rep will have this Event type available to them</inlineHelpText>
        <label>Districts 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SN02</fullName>
                </value>
                <value>
                    <fullName>SN03</fullName>
                </value>
                <value>
                    <fullName>SN04</fullName>
                </value>
                <value>
                    <fullName>SN05</fullName>
                </value>
                <value>
                    <fullName>SN06</fullName>
                </value>
                <value>
                    <fullName>ST01-San Antonio</fullName>
                </value>
                <value>
                    <fullName>ST02-RGV</fullName>
                </value>
                <value>
                    <fullName>ST03-Houston Southwest</fullName>
                </value>
                <value>
                    <fullName>ST04-Houston West</fullName>
                </value>
                <value>
                    <fullName>ST05-Houston North</fullName>
                </value>
                <value>
                    <fullName>ST06-Houston East</fullName>
                </value>
                <value>
                    <fullName>ST07-Houston Southeast</fullName>
                </value>
                <value>
                    <fullName>ST08-Houston Central</fullName>
                </value>
                <value>
                    <fullName>TA01-East Texas</fullName>
                </value>
                <value>
                    <fullName>TA02-South Oklahoma</fullName>
                </value>
                <value>
                    <fullName>TA03-North Oklahoma</fullName>
                </value>
                <value>
                    <fullName>TA04-West Arkansas</fullName>
                </value>
                <value>
                    <fullName>TA05-East Arkansas</fullName>
                </value>
                <value>
                    <fullName>TA06-South Arkansas</fullName>
                </value>
                <value>
                    <fullName>TCW01-Charlotte North</fullName>
                </value>
                <value>
                    <fullName>TCW02-Charlotte South</fullName>
                </value>
                <value>
                    <fullName>TCW03-Nashville</fullName>
                </value>
                <value>
                    <fullName>TCW04-Chattanooga</fullName>
                </value>
                <value>
                    <fullName>TCW05-Knoxville</fullName>
                </value>
                <value>
                    <fullName>TCW06-Tri-Cities</fullName>
                </value>
                <value>
                    <fullName>TCW07-Upstate SC</fullName>
                </value>
                <value>
                    <fullName>TCW08-Western NC</fullName>
                </value>
                <value>
                    <fullName>UP01</fullName>
                </value>
                <value>
                    <fullName>UP02</fullName>
                </value>
                <value>
                    <fullName>UP03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_markets__c</fullName>
        <inlineHelpText>This field will capture which Market’s Sales Rep will have this Event type available to them</inlineHelpText>
        <label>Markets</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>HQ-Telesales</fullName>
                </value>
                <value>
                    <fullName>North Central</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_segmentationKey__c</fullName>
        <externalId>true</externalId>
        <label>Segmenation Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_territories__c</fullName>
        <inlineHelpText>This field will capture which Territories’ Sales Rep will have this Event type available to them</inlineHelpText>
        <label>Territories</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Carolinas East</fullName>
                </value>
                <value>
                    <fullName>Central California</fullName>
                </value>
                <value>
                    <fullName>Central Pacific</fullName>
                </value>
                <value>
                    <fullName>Desert</fullName>
                </value>
                <value>
                    <fullName>FL Northwest</fullName>
                </value>
                <value>
                    <fullName>FL Southeast</fullName>
                </value>
                <value>
                    <fullName>GA/AL North</fullName>
                </value>
                <value>
                    <fullName>GA/AL South</fullName>
                </value>
                <value>
                    <fullName>Great Lakes Central</fullName>
                </value>
                <value>
                    <fullName>Great Lakes East</fullName>
                </value>
                <value>
                    <fullName>Great Lakes North</fullName>
                </value>
                <value>
                    <fullName>Great Lakes South</fullName>
                </value>
                <value>
                    <fullName>Great Lakes West</fullName>
                </value>
                <value>
                    <fullName>Great Plains North</fullName>
                </value>
                <value>
                    <fullName>Great Plains South</fullName>
                </value>
                <value>
                    <fullName>Greater LA</fullName>
                </value>
                <value>
                    <fullName>Gulf</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>HQ-Telesales</fullName>
                </value>
                <value>
                    <fullName>Kansas/Missouri</fullName>
                </value>
                <value>
                    <fullName>Mid-State</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>New Jersey North</fullName>
                </value>
                <value>
                    <fullName>New York City</fullName>
                </value>
                <value>
                    <fullName>North Texas</fullName>
                </value>
                <value>
                    <fullName>Northern New England</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>NY East</fullName>
                </value>
                <value>
                    <fullName>Philadelphia Tri-State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Segmentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CCPM_campaign__c</columns>
        <columns>CCPM_channels__c</columns>
        <columns>CCPM_markets__c</columns>
        <columns>CCPM_territories__c</columns>
        <columns>CCPM_districts1__c</columns>
        <columns>CCPM_districts2__c</columns>
        <columns>CCPM_districts3__c</columns>
        <columns>CCPM_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SEG-{000000}</displayFormat>
        <label>Segmentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CCPM_District_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( CCPM_districts1__c ) ,ISBLANK( CCPM_districts2__c ),ISBLANK( CCPM_districts3__c ))</errorConditionFormula>
        <errorMessage>Districts cannot be left blank.</errorMessage>
    </validationRules>
</CustomObject>